--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -21,14 +21,16 @@
   z-index: 1000;
 }
 
-.ham > span > img {
-  width: 3rem;
-  height: 2.5rem;
+.ham-container {
   display: none;
-  cursor: pointer;
+  position: fixed;
+  width: 80vw;
+  height: 4rem;
+  background-color: #111;
+  z-index: 2000;
 }
 
-.ham > span {
+.ham {
   display: none;
   position: absolute;
   border: 2px solid #000;
@@ -36,9 +38,16 @@
   top: 0.4rem;
   right: 2rem;
   z-index: 10;
+  cursor: pointer;
 }
 
-.ham > span:hover {
+.nav-svg {
+  width: 3rem;
+  height: 2.5rem;
+  display: none;
+}
+
+.nav-svg:hover {
   border-color: #333a;
 }
 
@@ -54,62 +63,18 @@
   margin-right: 2rem;
 }
 
-.first-row,
-.sec-row > li {
+.nav-items {
   word-spacing: -0.5rem;
   cursor: pointer;
 }
 
-.first-row > li > a,
-.sec-row > li > a {
+.nav-links {
   text-decoration: none;
   color: #fff;
 }
 
-a:hover {
+.nav-links:hover {
   color: #fffa !important;
-}
-
-.ham {
-  display: none;
-  position: fixed;
-  width: 80vw;
-  height: 4rem;
-  background-color: #111;
-  z-index: 2000;
-}
-
-@media screen and (max-width: 900px) {
-  .ham > span > img {
-    display: block;
-  }
-  .ham {
-    display: block;
-  }
-  .ham > span {
-    display: block;
-  }
-  .nav {
-    align-items: flex-start;
-    height: auto;
-    background-color: #111;
-    width: 80vw;
-    padding-block: 2rem;
-    position: fixed;
-    flex-direction: column;
-    gap: 1rem;
-    transition: top 500ms ease-in-out;
-  }
-  .nav > .first-row {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .nav > .sec-row {
-    display: flex;
-    flex-direction: column;
-    margin-left: 2rem;
-  }
 }
 
 .active {
@@ -124,4 +89,37 @@ a:hover {
 .logout:hover {
   color: #fffa;
   background: none;
+}
+
+@media screen and (max-width: 900px) {
+  .nav-svg {
+    display: block;
+  }
+  .ham-container {
+    display: block;
+  }
+  .ham {
+    display: block;
+  }
+  .nav {
+    align-items: flex-start;
+    height: auto;
+    background-color: #111;
+    width: 80vw;
+    padding-block: 2rem;
+    position: fixed;
+    flex-direction: column;
+    gap: 1rem;
+    transition: top 500ms ease-in-out;
+  }
+  .first-row {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sec-row {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+  }
 }
