--- a/src/pages/authPages/auth.css
+++ b/src/pages/authPages/auth.css
@@ -1,6 +1,6 @@
 .form-wrapper {
   width: 60vw;
-  height: auto;
+  height: 45rem;
   background-color: #222;
   display: flex;
   justify-content: center;
@@ -10,51 +10,64 @@
   padding-bottom: 10rem;
 }
 
-.form-wrapper > h3 {
+.form-title {
   color: #6405d2;
   margin: 2rem 0;
   font-size: 3rem;
 }
 
 .form-container {
+  width: 20vw;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: relative;
+  gap: 1.5rem;
 }
 
-.form-container > input {
-  width: 20vw;
+.input-container {
+  width: 100%;
+  position: relative;
+}
+
+.form-input {
+  width: 100%;
+  background-color: #222;
   margin-bottom: 1rem;
   font-size: 1.5rem;
   padding: 0.5rem;
-  border-radius: 0.7rem;
   border: none;
-  color: #6405d2;
-}
-
-.form-container > input:focus {
-  outline: 3px solid #6405d2;
-}
-
-.form-container > input:user-invalid {
-  outline: 3px solid rgba(255, 0, 0, 0.8);
-}
-
-.form-container > input:user-valid {
-  outline: 3px solid rgba(0, 255, 0, 0.8);
-}
-
-.form-container > label {
-  align-self: flex-start;
+  border-bottom: 1px solid #fff;
   color: #fff;
-  font-size: 1.3rem;
-  margin-bottom: 0.5rem;
 }
 
-.form-container > button {
+.form-input:focus {
+  outline: none;
+}
+
+.form-input:user-invalid {
+  border-bottom: 1px solid #f00;
+}
+
+.form-input:user-valid {
+  border-bottom: 1px solid #0f0;
+}
+
+.input-label {
+  color: #fff;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  cursor: text;
+  transition: bottom 200ms ease-in-out, opacity 100ms ease-in-out,
+    left 200ms ease-in-out;
+}
+
+.submit-btn {
   padding: 0.7rem 3rem;
   margin-top: 1rem;
   font-size: 1rem;
@@ -63,15 +76,16 @@
   cursor: pointer;
 }
 
-.form-container > button:hover {
+.submit-btn:hover {
   background-color: #6405d2;
   color: #fff;
 }
 
 .password-eye {
+  color: #fff;
   font-size: 1.5rem;
   position: absolute;
-  bottom: 5.1rem;
+  bottom: 1.5rem;
   right: 0.6rem;
   cursor: pointer;
   user-select: none;
@@ -84,4 +98,10 @@
 
 #google-button {
   margin-top: 2rem;
+}
+
+.err-msg {
+  width: 100%;
+  color: #f00;
+  margin: -1.5rem 0 0.2rem 0;
 }
