--- a/src/pages/authPages/auth.css
+++ b/src/pages/authPages/auth.css
@@ -56,15 +56,23 @@
 }
 
 .input-label {
+  display: flex;
   color: #fff;
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
   position: absolute;
   bottom: 1rem;
   left: 1rem;
+  opacity: 1;
   cursor: text;
   transition: bottom 200ms ease-in-out, opacity 100ms ease-in-out,
     left 200ms ease-in-out;
+}
+
+.input-label-active {
+  opacity: 0.7;
+  bottom: 3rem;
+  left: 0;
 }
 
 .submit-btn {
@@ -104,4 +112,10 @@
   width: 100%;
   color: #f00;
   margin: -1.5rem 0 0.2rem 0;
+}
+
+.label-required {
+  align-self: flex-start;
+  font-size: 0.8rem;
+  color: rgba(255, 0, 0, 0.4);
 }
