search page init

--- a/src/pages/authPages/auth.css
+++ b/src/pages/authPages/auth.css
@@ -11,7 +11,7 @@
 }
 
 .form-title {
-  color: #6405d2;
+  color: #9336ff;
   margin: 2rem 0;
   font-size: 3rem;
 }
@@ -85,7 +85,7 @@
 }
 
 .submit-btn:hover {
-  background-color: #6405d2;
+  background-color: #9336ff;
   color: #fff;
 }
 
