--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -61,16 +61,18 @@
 
 .sec-row {
   margin-right: 2rem;
+  margin-left: 0;
 }
 
 .search-container {
-  position: relative;
   display: flex;
   align-items: center;
+  position: relative;
+  width: calc(80vw - 35rem);
 }
 
 .nav-search {
-  width: 40vw;
+  width: inherit;
   padding: 0.4rem 3rem 0.4rem 0.6rem;
   font-size: 1.1rem;
   border: 1px solid #fffa;
@@ -127,7 +129,7 @@
   background: none;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .nav-svg {
     display: block;
   }
@@ -157,5 +159,13 @@
     display: flex;
     flex-direction: column;
     margin-left: 2rem;
+  }
+
+  .search-container {
+    position: absolute;
+    z-index: 10000;
+    width: calc(80vw - 10rem);
+    top: 0.8rem;
+    left: 1rem;
   }
 }
