--- a/src/pages/searchPage/search.css
+++ b/src/pages/searchPage/search.css
@@ -1,26 +1,75 @@
-.search-page-container {
-  display: grid;
-  grid-template-columns: 15% 85%;
-  width: 100%;
+.search-result {
+  color: #9336ff;
+  font-size: 2rem;
+  text-align: center;
 }
 
-.result-container {
-  width: 99.9%;
-  grid-column: 2;
+.search-page-container {
+  width: 90%;
   display: grid;
-  grid-template-rows: repeat(20, 13rem);
-  row-gap: 0.6rem;
+  grid-template-columns: repeat(5, 1fr);
+  row-gap: 1rem;
+  margin-inline: auto;
+  margin-top: 3rem;
 }
 
 .row-card {
-  width: 100%;
-  border: 1px solid #fff;
-  border-left: none;
+  width: 85%;
+  height: 25rem;
+  position: relative;
+  background-color: rgba(87, 87, 87, 0.596);
+  border: 1px solid rgba(255, 255, 255, 0.4);
   display: flex;
-  gap: 2rem;
+  flex-direction: column;
+  border-radius: 0.6rem;
+}
+
+.card-header {
+  width: 100%;
+  text-align: center;
+  color: #9336ff;
+  font-size: 1.5rem;
+  padding: 0.3rem;
+  background-color: #222;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+
+.image-container {
+  width: 100%;
+  margin-top: 0.3rem;
 }
 
 .card-image {
-  width: 20%;
+  width: 100%;
   height: 100%;
+  padding: 0.3rem;
+  border-radius: 1.5rem;
+}
+
+.card-content {
+  padding: 1rem 1rem 0 1rem;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  color: #fff;
+}
+
+.card-footer {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 0;
+  background-color: #222;
+  color: #9336ff;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
