--- a/src/pages/searchPage/search.css
+++ b/src/pages/searchPage/search.css
@@ -1,5 +1,5 @@
 .search-result {
-  color: #9336ff;
+  color: var(--font-light);
   font-size: 2rem;
   text-align: center;
 }
@@ -7,17 +7,18 @@
 .search-page-container {
   width: 90%;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   row-gap: 1rem;
+  column-gap: 2rem;
   margin-inline: auto;
   margin-top: 3rem;
 }
 
 .row-card {
-  width: 85%;
+  width: 100%;
   height: 25rem;
   position: relative;
-  background-color: rgba(87, 87, 87, 0.596);
+  background-color: var(--container-background);
   border: 1px solid rgba(255, 255, 255, 0.4);
   display: flex;
   flex-direction: column;
@@ -27,20 +28,22 @@
 .card-header {
   width: 100%;
   text-align: center;
-  color: #9336ff;
+  color: var(--font-light);
   font-size: 1.5rem;
   padding: 0.3rem;
-  background-color: #222;
+  background-color: var(--main-background);
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
+  border-bottom: 1px solid rgba(232, 185, 35, 0.4);
 }
 
 .image-container {
   width: 100%;
+  height: 50%;
   margin-top: 0.3rem;
 }
 
@@ -68,8 +71,9 @@
   justify-content: space-around;
   position: absolute;
   bottom: 0;
-  background-color: #222;
-  color: #9336ff;
+  background-color: var(--main-background);
+  color: var(--font-light);
   border-bottom-left-radius: inherit;
   border-bottom-right-radius: inherit;
+  border-top: 1px solid rgba(232, 185, 35, 0.4);
 }
