--- a/src/pages/searchPage/search.css
+++ b/src/pages/searchPage/search.css
@@ -5,9 +5,9 @@
 }
 
 .search-page-container {
-  width: 90%;
+  width: 60%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+  grid-template-rows: 1fr;
   row-gap: 1rem;
   column-gap: 2rem;
   margin-inline: auto;
@@ -16,35 +16,47 @@
 
 .row-card {
   width: 100%;
-  height: 25rem;
+  height: 15rem;
   position: relative;
   background-color: var(--container-background);
   border: 1px solid rgba(255, 255, 255, 0.4);
   display: flex;
-  flex-direction: column;
   border-radius: 0.6rem;
 }
 
+.card-content {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+  color: #fff;
+}
+
 .card-header {
-  width: 100%;
-  text-align: center;
   color: var(--font-light);
-  font-size: 1.5rem;
-  padding: 0.3rem;
-  background-color: var(--main-background);
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  font-size: 1.4rem;
   overflow: hidden;
-  border-bottom: 1px solid rgba(232, 185, 35, 0.4);
+  cursor: pointer;
+}
+
+.card-header:hover {
+  color: rgba(232, 185, 35, 0.4);
+}
+
+.card-price {
+  color: var(--font-light);
+  font-size: 1.2rem;
 }
 
 .image-container {
-  width: 100%;
-  height: 50%;
-  margin-top: 0.3rem;
+  width: 30%;
+  height: 100%;
+  background-color: var(--main-background);
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+  border-right: 1px solid rgba(232, 185, 35, 0.4);
 }
 
 .card-image {
@@ -54,26 +66,46 @@
   border-radius: 1.5rem;
 }
 
-.card-content {
-  padding: 1rem 1rem 0 1rem;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  overflow: hidden;
-  color: #fff;
-}
-
 .card-footer {
-  width: 100%;
-  height: 10%;
+  width: 5%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   position: absolute;
-  bottom: 0;
+  right: 0;
   background-color: var(--main-background);
-  color: var(--font-light);
-  border-bottom-left-radius: inherit;
+  border-top-right-radius: inherit;
   border-bottom-right-radius: inherit;
-  border-top: 1px solid rgba(232, 185, 35, 0.4);
+  border-left: 1px solid rgba(232, 185, 35, 0.4);
+}
+
+.page-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block: 2rem;
+}
+
+.nav-button {
+  padding: 0.7rem 1.5rem;
+  background-color: var(--container-background);
+  color: var(--font-light);
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  border-radius: 0;
+  border: 1px solid rgba(232, 185, 35, 0.4);
+  text-decoration: none !important;
+}
+
+.nav-button:hover {
+  background-color: var(--font-light);
+  color: var(--font-dark);
+}
+
+.active-button {
+  background-color: rgba(232, 185, 35, 0.7);
 }
