--- a/src/pages/authPages/auth.css
+++ b/src/pages/authPages/auth.css
@@ -57,7 +57,7 @@
 
 .input-label {
   display: flex;
-  color: var(--font-dark);
+  color: var(--font-light);
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
   position: absolute;
@@ -111,6 +111,7 @@
 
 .err-msg {
   width: 100%;
+  height: 1px;
   color: #f00;
   font-family: Arial, Helvetica, sans-serif;
   margin: -1.5rem 0 0.2rem 0;
