--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,10 +1,16 @@
-.dash-nav {
-  position: fixed;
-  left: 0;
-  width: 15vw;
-  height: 100vh;
-  background-color: var(--container-background);
+.dash-container {
+  display: grid;
+  grid-template-columns: 15vw 85vw;
+  height: calc(100vh - 4.5rem);
   margin-top: -1rem;
+  column-gap: 5rem;
+}
+
+.dash-nav {
+  grid-column: 1;
+  width: 15vw;
+  height: 100%;
+  background-color: var(--container-background);
 }
 
 .dash-list {
@@ -16,8 +22,6 @@
 .dash-list-item {
   width: 100%;
   text-align: center;
-  color: var(--font-light);
-  padding: 1rem;
   cursor: pointer;
 }
 
@@ -25,6 +29,15 @@
   background-color: var(--main-background);
 }
 
-.active-item {
+.dash-nav-link {
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  text-decoration: none;
+  color: var(--font-light);
+}
+
+.active-dash {
+  text-decoration: none;
   background-color: rgba(232, 185, 35, 0.7);
 }
