--- a/src/pages/dashboard/addProduct/dashform.css
+++ b/src/pages/dashboard/addProduct/dashform.css
@@ -3,6 +3,9 @@
   width: 100%;
   height: 100%;
   align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 5rem;
   padding-bottom: 0;
   background-color: var(--main-background);
 }
@@ -15,4 +18,51 @@
 
 .dash-form-input {
   background-color: var(--main-background);
+}
+
+.add-content {
+  position: absolute;
+  right: 0;
+  top: 30%;
+}
+
+.add-button {
+  font-size: 1.5rem;
+  color: var(--font-light);
+  cursor: pointer;
+}
+
+.add-button:hover {
+  color: var(--container-background);
+}
+
+.text-area-head {
+  color: var(--font-light);
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.text-area-desc {
+  margin-top: 3rem;
+}
+
+.text-area-style {
+  width: 30vw;
+  height: 25vh;
+  font-size: 1.3rem;
+  background-color: var(--container-background);
+  color: var(--font-light);
+  border: 1px solid rgba(237, 239, 238, 0.4);
+  padding: 0.2rem;
+}
+
+.text-area-style:focus {
+  outline: none;
+}
+
+.text-area-info {
+  width: 30vw;
+  font-size: 1.1rem;
+  margin-top: 1rem;
+  color: var(--font-light);
 }
