--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -13,9 +13,16 @@
   margin-right: 1rem;
 }
 
+.content-wrapper {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  height: 100%;
+}
+
 .product-image {
   margin-left: 1rem;
   width: 45vw;
+  height: 50%;
 }
 
 .product-name {
@@ -24,4 +31,32 @@
 
 .product-description {
   font-size: 1.1rem;
+}
+
+.desc-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  grid-column: 1;
+}
+
+.product-checkout {
+  grid-column: 2;
+  border-left: 1px solid rgba(232, 185, 35, 0.3);
+  padding-left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.checkout-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  gap: 0.6rem;
+  background-color: var(--container-background);
+  width: 80%;
+  height: 40%;
+  border-radius: 2rem;
 }
