--- a/src/pages/dashboard/addProduct/dashform.css
+++ b/src/pages/dashboard/addProduct/dashform.css
@@ -11,53 +11,53 @@
 }
 
 .dash-form-container {
-  width: 30vw;
+  width: 100%;
   justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
   padding-top: 2rem;
+  gap: 4rem;
+}
+
+.dash-input-container {
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .dash-form-input {
   background-color: var(--main-background);
 }
 
-.add-content {
-  position: absolute;
-  right: 0;
-  top: 30%;
-}
-
-.add-button {
-  font-size: 1.5rem;
-  color: var(--font-light);
-  cursor: pointer;
-}
-
-.add-button:hover {
-  color: var(--container-background);
-}
-
 .text-area-head {
   color: var(--font-light);
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
+  display: block;
 }
 
 .text-area-desc {
-  margin-top: 3rem;
+  margin-top: 0.8rem;
 }
 
 .text-area-style {
   width: 30vw;
-  height: 25vh;
+  height: 15rem;
   font-size: 1.3rem;
   background-color: var(--container-background);
   color: var(--font-light);
   border: 1px solid rgba(237, 239, 238, 0.4);
   padding: 0.2rem;
+  resize: none;
 }
 
 .text-area-style:focus {
   outline: none;
+}
+
+.text-area-style:user-invalid {
+  border: 1px solid #f00;
 }
 
 .text-area-info {
@@ -65,4 +65,23 @@
   font-size: 1.1rem;
   margin-top: 1rem;
   color: var(--font-light);
+}
+
+.product-submit {
+  padding: 0.6rem 2.5rem;
+  color: var(--font-light);
+  background-color: var(--container-background);
+  border: 1px solid rgba(237, 239, 238, 0.4);
+  cursor: pointer;
+  font-size: 0.9rem;
+  align-self: center;
+}
+
+.product-submit:hover {
+  background-color: rgba(60, 62, 73, 0.7);
+}
+
+.submit-error {
+  font-size: 1.1rem;
+  color: #f00;
 }
