--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,7 +36,7 @@
   border: 0.1rem solid #000;
   padding: 0.2rem 0.5rem;
   top: 0.4rem;
-  right: 2rem;
+  right: 0;
   z-index: 10;
   cursor: pointer;
 }
@@ -72,7 +72,7 @@
 }
 
 .nav-search {
-  width: inherit;
+  width: 100%;
   padding: 0.4rem 3rem 0.4rem 0.6rem;
   font-size: 1.1rem;
   border: 1px solid var(--font-light);
@@ -174,9 +174,8 @@
   .search-container {
     position: fixed;
     z-index: 10000;
-    width: calc(80vw - 10rem);
+    width: 55%;
     top: 0.8rem;
-    left: 12vw;
   }
   .rule {
     visibility: hidden;
