--- a/src/pages/authPages/auth.css
+++ b/src/pages/authPages/auth.css
@@ -17,7 +17,7 @@
 }
 
 .form-container {
-  width: 20vw;
+  width: 40%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -111,7 +111,7 @@
 
 .err-msg {
   width: 100%;
-  height: 1px;
+  height: 1rem;
   color: #f00;
   font-family: Arial, Helvetica, sans-serif;
   margin: -1.5rem 0 0.2rem 0;
@@ -133,4 +133,28 @@
 
 .forgot-link:hover {
   color: var(--nav-search);
+}
+
+@media screen and (max-width: 1001px) {
+  .form-wrapper {
+    width: 80vw;
+  }
+  .form-container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .form-wrapper {
+    width: 90vw;
+  }
+  .form-container {
+    width: 80%;
+  }
+  .submit-btn {
+    margin-top: 2rem;
+  }
+  .err-msg {
+    height: 2.5rem;
+  }
 }
