--- a/src/pages/dashboard/addProduct/dashform.css
+++ b/src/pages/dashboard/addProduct/dashform.css
@@ -12,9 +12,10 @@
 
 .dash-form-container {
   width: 100%;
+  display: grid;
+  grid-template-columns: 40% 60%;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-direction: row;
   padding-top: 2rem;
   gap: 4rem;
 }
@@ -24,6 +25,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  grid-column: 1;
+  grid-row: 1;
 }
 
 .dash-form-input {
@@ -84,4 +87,40 @@
 .submit-error {
   font-size: 1.1rem;
   color: #f00;
+}
+
+.hide {
+  display: block;
+}
+
+.show {
+  display: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .dash-form-container {
+    margin-top: 2rem;
+    justify-items: center;
+    grid-template-columns: 100%;
+    gap: 1rem;
+  }
+  .dash-input-container {
+    width: 60vw;
+  }
+  .text-area-desc {
+    width: 80vw;
+  }
+  .text-area-style {
+    width: inherit;
+  }
+  .text-area-info {
+    width: inherit;
+  }
+  .hide {
+    display: none;
+  }
+
+  .show {
+    display: block;
+  }
 }
