--- a/src/pages/searchPage/search.css
+++ b/src/pages/searchPage/search.css
@@ -39,6 +39,10 @@
   font-size: 1.4rem;
   overflow: hidden;
   cursor: pointer;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 6;
+  overflow: hidden;
 }
 
 .card-header:hover {
@@ -51,7 +55,7 @@
 }
 
 .image-container {
-  width: 30%;
+  width: 20rem;
   height: 100%;
   background-color: var(--main-background);
   border-top-left-radius: inherit;
