added shopping cart logic to server and frontend

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -139,6 +139,10 @@
   visibility: visible;
 }
 
+.cart {
+  color: var(--font-light);
+}
+
 @media screen and (max-width: 1000px) {
   .nav-svg {
     display: block;
