--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -58,6 +58,23 @@
   gap: 0.6rem;
   background-color: var(--container-background);
   width: 80%;
-  height: 40%;
+  height: 10rem;
   border-radius: 2rem;
+  font-size: 1.1rem;
+}
+
+.add-cart-btn {
+  background-color: var(--main-background);
+  border: 1px solid var(--font-light);
+  font-size: 1.2rem;
+  color: var(--font-light);
+  padding: 0.6rem 1rem;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  margin-top: -0.6rem;
+}
+
+.add-cart-btn:hover {
+  background-color: rgba(39, 43, 48, 0.7);
+  border-color: rgba(232, 185, 35, 0.6);
 }
