--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   gap: 2rem;
   margin-right: 1rem;
-  width: 100%;
+  width: 50%;
 }
 
 .content-wrapper {
@@ -20,10 +20,14 @@
   height: 100%;
 }
 
-.product-image {
+.product-image-container {
+  width: 50%;
+  height: 100%;
   margin-left: 1rem;
-  width: 45vw;
-  height: 50%;
+}
+
+.product-image {
+  width: 100%;
 }
 
 .product-name {
@@ -60,7 +64,7 @@
   width: 80%;
   height: 10rem;
   border-radius: 2rem;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
 .add-cart-btn {
@@ -76,5 +80,70 @@
 
 .add-cart-btn:hover {
   background-color: rgba(39, 43, 48, 0.7);
+  border-color: rgba(232, 185, 35, 0.6);
+}
+
+.review-container {
+  width: 48.8%;
+  margin-top: 3rem;
+  margin-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-top: 1px solid rgba(232, 185, 35, 0.4);
+}
+
+.user-review {
+  display: flex;
+  flex-direction: column;
+}
+
+.review-label {
+  color: var(--font-light);
+  font-size: 1.4rem;
+  margin-bottom: 0.5rem;
+}
+
+.review-input {
+  width: 35%;
+  height: 6rem;
+  font-size: 1.3rem;
+  padding: 0.3rem;
+  font-family: inherit;
+  background-color: var(--container-background);
+  border: 1px solid var(--font-light);
+  color: var(--font-light);
+  border-radius: 0.3rem;
+}
+
+.review-input:focus {
+  outline: none;
+}
+
+.submit-review {
+  width: 10rem;
+  margin-top: 1rem;
+  padding: 0.4rem 0.8rem;
+}
+
+.rating-container {
+  margin-top: 0.3rem;
+}
+
+.rating-label {
+  color: var(--font-light);
+  margin-right: 0.2rem;
+}
+
+.rating-select {
+  padding: 0.4rem 0.8rem;
+  background-color: var(--container-background);
+  border: 1px solid var(--font-light);
+  color: var(--font-light);
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+
+.rating-select:hover {
   border-color: rgba(232, 185, 35, 0.6);
 }
