--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,6 +28,7 @@
   height: 4rem;
   background-color: rgba(39, 43, 48, 0.9);
   z-index: 2000;
+  border-radius: 0.3rem;
 }
 
 .ham {
@@ -36,7 +37,7 @@
   border: 0.1rem solid #000;
   padding: 0.2rem 0.5rem;
   top: 0.4rem;
-  right: 0;
+  right: 0.2rem;
   z-index: 10;
   cursor: pointer;
 }
@@ -108,6 +109,7 @@
 .nav-links {
   text-decoration: none;
   color: var(--font-light);
+  transition: opacity 200ms ease-in-out;
 }
 
 .nav-links:hover {
@@ -121,6 +123,7 @@
 .logout {
   color: var(--font-light);
   cursor: pointer;
+  transition: opacity 200ms ease-in-out;
 }
 
 .logout:hover {
@@ -141,6 +144,11 @@
 
 .cart {
   color: var(--font-light);
+  transition: opacity 200ms ease-in-out;
+}
+
+.cart:hover {
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 1000px) {
@@ -180,6 +188,7 @@
     z-index: 10000;
     width: 55%;
     top: 0.8rem;
+    margin-left: 0.2rem;
   }
   .rule {
     visibility: hidden;
