--- a/src/pages/productPage/productPage.css
+++ b/src/pages/productPage/productPage.css
@@ -20,15 +20,24 @@
   height: 100%;
 }
 
-.product-image-container {
+.product-gallery-container {
   width: 50%;
   height: 100%;
   margin-left: 1rem;
 }
 
+.product-img-container {
+  background-color: var(--container-background);
+  border-radius: 0.3rem;
+  height: 30rem;
+  width: 100%;
+}
+
 .product-image {
   border-radius: 0.3rem;
   width: 100%;
+  height: 100%;
+  object-position: center;
 }
 
 .product-name {
@@ -62,7 +71,7 @@
   flex-direction: column;
   gap: 0.6rem;
   background-color: var(--container-background);
-  width: 80%;
+  width: 12rem;
   height: 10rem;
   border-radius: 2rem;
   font-size: 1.3rem;
@@ -110,7 +119,7 @@
 }
 
 .review-input {
-  width: 35%;
+  width: 25rem;
   height: 6rem;
   font-size: 1.3rem;
   padding: 0.3rem;
@@ -181,10 +190,69 @@
 
 .img-display {
   width: 8rem;
+  height: 4.5rem;
   cursor: pointer;
 }
 
 .product-img {
   width: 100%;
+  height: 100%;
+  object-fit: fill;
   border-radius: 0.3rem;
+}
+
+.hide-name {
+  display: block;
+}
+
+.show-name {
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .page-content-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .product-gallery-container {
+    width: 80%;
+    margin-left: 0;
+  }
+  .page-content {
+    width: 100%;
+    padding-inline: 1rem;
+  }
+  .hide-name {
+    display: none;
+  }
+  .show-name {
+    display: block;
+  }
+  .product-img-container {
+    height: 50vw;
+    width: 80vw;
+  }
+  .content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .desc-container {
+    margin-block: 1rem;
+  }
+  .product-checkout {
+    border: none;
+  }
+  .review-container {
+    width: 100%;
+    border: none;
+    margin-left: 0;
+  }
+  .user-review {
+    border-top: 1px solid rgba(232, 185, 35, 0.4);
+    padding: 1rem;
+  }
+  .review-input {
+    width: 60%;
+  }
 }
