--- a/src/pages/dashboard/addProduct/dashform.css
+++ b/src/pages/dashboard/addProduct/dashform.css
@@ -115,6 +115,37 @@
   cursor: pointer;
 }
 
+.add-img-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.img-frame {
+  width: 80%;
+  position: relative;
+}
+
+.added-img {
+  width: 100%;
+  height: 100%;
+}
+
+.remove-img {
+  color: #f00;
+  position: absolute;
+  top: -0.6rem;
+  right: 0.2rem;
+  font-size: 3rem;
+  transform: rotateZ(45deg);
+  cursor: pointer;
+}
+
+.remove-img:hover {
+  color: #a00;
+}
+
 @media screen and (max-width: 1100px) {
   .dash-form-container {
     margin-top: 2rem;
@@ -141,6 +172,7 @@
     display: block;
   }
   .add-img-container {
+    width: 100%;
     align-items: center;
   }
   .img-frame {
