--- a/Client/src/pages/searchPage/search.css
+++ b/Client/src/pages/searchPage/search.css
@@ -41,7 +41,7 @@
   cursor: pointer;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 6;
+  -webkit-line-clamp: 5;
   overflow: hidden;
 }
 
@@ -72,19 +72,10 @@
   color: #fff;
 }
 
-.card-footer {
-  width: 5%;
-  height: 100%;
+.content-props {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  position: absolute;
-  right: 0;
-  background-color: var(--main-background);
-  border-top-right-radius: inherit;
-  border-bottom-right-radius: inherit;
-  border-left: 1px solid rgba(232, 185, 35, 0.4);
+  gap: 0.5rem;
 }
 
 .page-buttons {
@@ -187,7 +178,7 @@
     background-color: var(--main-background);
     border-radius: 0 0 0.6rem 0.6rem;
     padding: 0.5rem;
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
