User page finished. Admin can make users admins and return them to users, Delete users, Reset users report count and unreport reported reviews. Added more security to dashboard to prevent loged in admin that got demoted make sure he cant reach dashboard.

--- a/Client/src/pages/dashboard/users/user/user.css
+++ b/Client/src/pages/dashboard/users/user/user.css
@@ -140,3 +140,14 @@
   display: flex;
   gap: 0.2rem;
 }
+
+.up-unreport {
+  border-color: rgba(232, 185, 35, 0.6);
+  padding: 0.4rem;
+  margin-bottom: -0.7rem;
+  width: 5rem;
+}
+
+.up-unreport:hover {
+  border-color: rgba(232, 185, 35, 1);
+}
