--- a/Client/src/pages/shoppingCart/shoppingcart.css
+++ b/Client/src/pages/shoppingCart/shoppingcart.css
@@ -1,10 +1,15 @@
 .cartpage-container {
-  margin-left: 1rem;
+  margin-left: 5rem;
   margin-top: 7rem;
+  display: grid;
+  grid-template-columns: 50% 30% 20%;
+}
+
+.cart-items-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  width: 70%;
+  gap: 0.5rem;
+  width: 100%;
 }
 
 .remove-cart-item {
@@ -27,4 +32,31 @@
   cursor: pointer;
   background-color: var(--font-light);
   border: 1px solid rgba(232, 185, 35, 0.8);
+  border-radius: 0.3rem;
+  width: 2rem;
+}
+
+.cart-items-container > .row-card {
+  width: 90%;
+  height: 10rem;
+}
+
+.cart-items-container > .row-card > .image-container {
+  width: 15rem;
+}
+
+.cart-price-wrapper {
+  grid-column: 3;
+  color: var(--font-light);
+  border-left: 1px solid rgba(232, 185, 35, 0.3);
+  display: flex;
+  justify-content: center;
+}
+
+.cart-price {
+  width: 70%;
+  background-color: var(--container-background);
+  height: 10rem;
+  border-radius: 0.4rem;
+  margin-top: 2rem;
 }
