--- a/Client/src/pages/searchPage/search.css
+++ b/Client/src/pages/searchPage/search.css
@@ -124,7 +124,7 @@
 .sort-options {
   position: absolute;
   display: none;
-  width: 10%;
+  width: 10rem;
   flex-direction: column;
   color: var(--font-light);
   z-index: 999;
