--- a/Client/src/components/navbar/navbar.css
+++ b/Client/src/components/navbar/navbar.css
@@ -109,15 +109,32 @@
 .nav-links {
   text-decoration: none;
   color: var(--font-light);
-  transition: opacity 200ms ease-in-out;
+  position: relative;
 }
 
-.nav-links:hover {
-  opacity: 0.4 !important;
+.nav-links::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0.1rem;
+  bottom: 0;
+  left: 0;
+  background-color: var(--font-light);
+  transition: width 300ms ease-in-out;
 }
 
-.active {
-  text-decoration: underline !important;
+.nav-links:hover::after {
+  width: 100%;
+}
+
+.active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.1rem;
+  bottom: 0;
+  left: 0;
+  background-color: var(--font-light);
 }
 
 .logout {
