--- a/Client/src/pages/dashboard/statistics/statistics.css
+++ b/Client/src/pages/dashboard/statistics/statistics.css
@@ -5,17 +5,20 @@
 
 .stat-items-container {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
+  width: 78vw;
 }
 
 .stat-item {
-  width: fit-content;
+  width: 20rem;
   border: 1px solid rgba(232, 185, 35, 0.2);
   padding: 3.5rem 3rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  justify-content: center;
   color: rgba(237, 239, 238, 0.9);
   font-size: 1.3rem;
 }
@@ -63,4 +66,11 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .stat-items-container {
+    width: 100%;
+    justify-content: center;
+  }
 }
