--- a/Client/src/pages/homePage/home.css
+++ b/Client/src/pages/homePage/home.css
@@ -7,7 +7,7 @@
 
 .sub-title {
   color: #fff;
-  margin: 1rem;
+  margin-inline: 1rem;
   text-decoration: underline;
 }
 
@@ -15,12 +15,13 @@
   position: relative;
   display: flex;
   align-items: center;
+  margin-bottom: 2rem;
 }
 
 .grid-container {
   --transform-i: 0;
   display: grid;
-  grid-template-columns: repeat(12, 25%);
+  grid-template-columns: repeat(12, 20%);
   gap: 0.3rem;
   transform: translateX(calc(-100% * var(--transform-i)));
   transition: transform 700ms ease-in-out;
@@ -28,12 +29,14 @@
 
 .grid-col {
   grid-column: var(--i);
+  display: flex;
+  align-items: center;
 }
 
 .grid-col > img {
   cursor: pointer;
   width: 100%;
-  height: 50%;
+  height: 70%;
 }
 
 .grid-col > img:hover {
