--- a/Client/src/pages/homePage/home.css
+++ b/Client/src/pages/homePage/home.css
@@ -2,7 +2,13 @@
   text-align: center;
   color: #fff;
   font-size: 3rem;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
+}
+
+.home-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .sub-title {
@@ -15,33 +21,45 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-bottom: 2rem;
 }
 
 .grid-container {
   --transform-i: 0;
   display: grid;
-  grid-template-columns: repeat(12, 20%);
+  grid-template-columns: repeat(10, 22%);
   gap: 0.3rem;
   transform: translateX(calc(-100% * var(--transform-i)));
   transition: transform 700ms ease-in-out;
+  padding-inline: 0.5rem;
 }
 
 .grid-col {
   grid-column: var(--i);
   display: flex;
   align-items: center;
+  position: relative;
+  height: 12rem;
 }
 
 .grid-col > img {
-  cursor: pointer;
   width: 100%;
-  height: 70%;
+  height: 100%;
+  cursor: pointer;
 }
 
-.grid-col > img:hover {
-  transform: scale(1.2, 1.2);
-  transition: transform 500ms ease-in-out;
+.grid-col::after {
+  cursor: pointer;
+  content: "";
+  width: 0;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  left: 0;
+  transition: width 200ms linear;
+}
+
+.grid-col:hover::after {
+  width: 100%;
 }
 
 .arrow {
