--- a/Client/src/pages/homePage/home.css
+++ b/Client/src/pages/homePage/home.css
@@ -26,7 +26,7 @@
 .grid-container {
   --transform-i: 0;
   display: grid;
-  grid-template-columns: repeat(10, 22%);
+  grid-template-columns: repeat(10, 20%);
   gap: 0.3rem;
   transform: translateX(calc(-100% * var(--transform-i)));
   transition: transform 700ms ease-in-out;
@@ -74,17 +74,27 @@
   width: 100%;
 }
 
+.arrow-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .arrow {
   position: absolute;
   z-index: 10;
   width: 2rem;
   height: 7rem;
-  background-color: rgba(190, 190, 190, 0.7);
+  background-color: rgba(190, 190, 190, 0.8);
   cursor: pointer;
   font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 0.5rem;
 }
 
 .right-arrow {
@@ -96,7 +106,7 @@
 }
 
 .arrow:hover {
-  background-color: rgba(190, 190, 190, 0.5);
+  background-color: rgba(190, 190, 190, 0.6);
 }
 
 .main-flex-container {
@@ -107,7 +117,7 @@
   transition: transform 700ms ease-in-out;
   padding-inline: 2.5rem;
   width: 100%;
-  height: 35rem;
+  height: 30rem;
   flex-wrap: nowrap;
 }
 
