--- a/Client/src/pages/homePage/home.css
+++ b/Client/src/pages/homePage/home.css
@@ -25,9 +25,10 @@
 
 .grid-container {
   --transform-i: 0;
+  --items-num: 14;
   display: grid;
-  grid-template-columns: repeat(10, 20%);
-  gap: 0.3rem;
+  grid-template-columns: repeat(var(--items-num), 18rem);
+  gap: 0.5rem;
   transform: translateX(calc(-100% * var(--transform-i)));
   transition: transform 700ms ease-in-out;
   padding-inline: 0.5rem;
@@ -42,8 +43,7 @@
   height: 12rem;
 }
 
-.grid-col > img,
-.flex-col > img {
+.grid-col > img {
   width: 100%;
   height: 100%;
   cursor: pointer;
@@ -51,7 +51,9 @@
 
 .flex-col > img {
   object-fit: contain;
-  object-position: center;
+  object-position: right;
+  height: 100%;
+  cursor: pointer;
 }
 
 .flex-col > img::before {
@@ -124,10 +126,85 @@
 .flex-col {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   position: relative;
   height: 100%;
   flex: 0 0 auto;
   width: 100%;
   background-color: rgba(60, 62, 73, 0.2);
-  border-radius: 5rem;
+  border-radius: 1.3rem;
+  gap: 2rem;
+}
+
+.carousel-name {
+  color: var(--font-light);
+  font-size: 2rem;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  word-break: break-all;
+  width: 40%;
+  padding: 2rem 2rem 0 0;
+}
+
+.name-txt {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.name-txt:hover {
+  opacity: 0.8;
+}
+
+.server-error {
+  color: var(--font-light);
+  font-size: 2rem;
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
+  margin-top: 8rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .flex-col {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-block: 0.5rem;
+    gap: 1rem;
+  }
+  .flex-col > img {
+    object-position: center;
+    width: 100%;
+  }
+  .carousel-name {
+    height: auto;
+    justify-content: center;
+    padding: 0;
+  }
+  .name-txt {
+    -webkit-line-clamp: 1;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .arrow {
+    display: none;
+  }
+  .main-flex-container {
+    padding: 0;
+    overflow: auto;
+  }
+  .grid-container {
+    overflow: auto;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .flex-col > img {
+    height: auto;
+  }
 }
